package org.switch2022.project.mapper;

import org.switch2022.project.model.valueobject.TypologyID;
import org.switch2022.project.model.valueobject.TypologyDesignation;

public class TypologyDTO {

    public TypologyID typologyID;
    public TypologyDesignation typologyDesignation;
}
